src/scss/_content.scss
@use "bulma/sass/utilities/initial-variables" as initial-variables;
@use "bulma/sass/utilities/derived-variables" as derived-variables;
@use "variables" as hvars;

.content {
  text-align: justify;

  hyphens: auto;
  hyphenate-limit-chars: 6 3 3;
  hyphenate-limit-lines: 2;
  hyphenate-limit-last: always;
  hyphenate-limit-zone: 8%;

  h1 {
    font-size: hvars.$h-h1-font-size;
    font-weight: 400;
  }

  h2 {
    font-size: hvars.$h-h2-font-size;
    font-weight: 400;
  }

  h3 {
    font-size: hvars.$h-h3-font-size;
    font-weight: 400;
  }

  h4 {
    font-size: hvars.$h-h4-font-size;
    font-weight: 400;
  }

  h5 {
    font-size: hvars.$h-h5-font-size;
    font-weight: 400;
  }

  h6 {
    font-size: hvars.$h-h6-font-size;
    font-weight: 400;
  }

  a {
    &:hover {
      text-decoration: underline;
    }

    &.button {
      &:hover {
        text-decoration: none;
      }
    }
  }

  ol,
  ul {
    margin-left: 1rem;
  }

  kbd {
    font-family: derived-variables.$family-code;
    font-size: derived-variables.$size-small;
    color: initial-variables.$white;
    background-color: initial-variables.$red;
    border-radius: initial-variables.$radius;
    padding: 0.25em 0.5em;
  }

  code,
  var {
    font-family: "JetBrains Mono", monospace;
    font-size: 0.875rem;
    font-weight: 500;
    padding: 0.1875rem 0.4rem;
    color: derived-variables.$code;
    background-color: derived-variables.$code-background;
    word-break: break-all;
  }

  pre {
    padding: 6px;
  }

  blockquote {
    quotes: "\201C" "\201D";
    margin: 1.5em 0;
    padding: 0.25em 0 0.5em 0;
    font-style: normal;
    position: relative;
    padding-left: 1.5rem;

    &::before {
      content: open-quote;
      position: absolute;
      left: 0;
      top: -0.15em;
      font-size: 3.5em;
      line-height: 1;
      color: #c03030;
      font-family: Georgia, "Times New Roman", serif;
    }
  }
}

// Font Awesome list and icon sizes (demo section)
.h-fa-ul {
  list-style-type: none;
  margin-left: 0;
  padding-left: 2em;

  li {
    position: relative;
  }

  // Fully suppress list marker so it never shows (e.g. blue dot in some browsers)
  li::marker {
    content: none;
    font-size: 0;
    display: none;
  }
}

.h-fa-li {
  position: absolute;
  left: -2em;
  width: 2em;
  text-align: center;
}

.h-fa-3x {
  font-size: 3em;
  line-height: 1;

  .svg-inline--fa {
    margin-right: 0.5rem;
  }
}

.h-fa-lg.icon {
  font-size: 1.33em;
}

// Message with icon on the left (Bulma message-body + icon)
.message-body.h-message-with-icon {
  display: flex;
  align-items: flex-start;
  gap: 0.75rem;

  .icon {
    flex-shrink: 0;
  }
}

// Changelog list: tag + description per row (Bulma tag colors)
.h-changelog {
  list-style: none;
  margin-left: 0;
  padding-left: 0;

  .tag {
    text-transform: uppercase;
    flex-shrink: 0;
  }
}

.h-changelog__item {
  display: flex;
  align-items: flex-start;
  gap: 0.75rem;
  margin-bottom: 0.5rem;

  &:last-child {
    margin-bottom: 0;
  }
}

.h-changelog__text {
  flex: 1;
}

